[tool.poetry]
name = "projeto-dados"
version = "0.1.0"
description = "Peojeto de estrutura de dados no python do zero"
authors = ["albertohco <acordeiro@3anet.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
