[tool.poetry]
name = "projeto-dados"
version = "0.1.0"
description = "Peojeto de estrutura de dados no python do zero"
authors = ["albertohco <acordeiro@3anet.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
pytest = "^7.4.2"
requests = "^2.31.0"
isort = "^5.12.0"
blue = "^0.9.1"
pydocstyle = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []